# lazy_transducer

./: Cargo.toml  LICENSE  README.md
src/: builder.rs  lazy_transducer.rs  lib.rs
tests/: test.rs
